--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
     -->
 
     <!-- ionic/angularjs js -->
+    <script src="lib/node-uuid/uuid.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
