--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,8 @@
     <!-- ionic/angularjs js -->
     <script src="lib/node-uuid/uuid.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="angular.js"></script>
+    <script src="lib/angular-toArrayFilter/toArrayFilter.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
